tests/kyverno-policies/pod-account-validation/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-skip
  namespace: test
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pass
  namespace: user-test
  labels:
    account: PZS0001
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pass-paas
  namespace: paas
  labels:
    account: PZS0001
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-fail
  namespace: user-test
  labels:
    account: foobar
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-fail-paas
  namespace: paas
  labels:
    account: foobar
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-fail-prefix
  namespace: user-test
  labels:
    account: oscall
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-fail-prefix-paas
  namespace: paas
  labels:
    account: oscall
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-skip
  namespace: user-test
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-pass
  namespace: paas
  labels:
    account: PZS0001
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-fail
  namespace: paas
  labels:
    account: PZS0002
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
