tests/kyverno-policies/pod-account-validation/test.yaml
---
name: pod-account-validation
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: pod-account-validation
    rule: pods-user-authorized-for-account
    resource: test-skip
    kind: Pod
    result: skip
  - policy: pod-account-validation
    rule: pods-user-authorized-for-account
    resource: test-skip-op
    kind: Pod
    result: skip
  - policy: pod-account-validation
    rule: pods-user-authorized-for-account
    resource: test-pass
    kind: Pod
    result: pass
  - policy: pod-account-validation
    rule: pods-user-authorized-for-account
    resource: test-fail
    kind: Pod
    result: fail
  - policy: pod-account-validation
    rule: pods-user-account-prefix
    resource: test-fail-prefix
    kind: Pod
    result: fail
