tests/kyverno-policies/pod-account-validation/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-account-validation
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: pod-account-validation
    rule: pods-user-account-prefix
    resources:
      - test-pass
      - test-pass-paas
    kind: Pod
    result: pass
  - policy: pod-account-validation
    rule: pods-user-account-prefix
    resources:
      - test-fail
      - test-fail-paas
    kind: Pod
    result: fail
  - policy: pod-account-validation
    rule: pods-user-account-prefix
    resources:
      - test-fail-prefix
      - test-fail-prefix-paas
    kind: Pod
    result: fail
  - policy: pod-account-validation
    rule: pods-user-authorized-for-account
    resources:
      - test-skip
    kind: Pod
    result: skip
  - policy: pod-account-validation
    rule: pods-user-authorized-for-account
    resources:
      - user-test/test-pass
    kind: Pod
    result: pass
  - policy: pod-account-validation
    rule: pods-user-authorized-for-account
    resources:
      - user-test/test-fail
    kind: Pod
    result: fail
  - policy: pod-account-validation
    rule: paas-user-authorized-for-account
    resources:
      - test-paas-skip
    kind: Pod
    result: skip
  - policy: pod-account-validation
    rule: paas-user-authorized-for-account
    resources:
      - test-paas-pass
    kind: Pod
    result: pass
  - policy: pod-account-validation
    rule: paas-user-authorized-for-account
    resources:
      - test-paas-fail
    kind: Pod
    result: fail
