tests/kyverno-policies/pod-account-validation/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: pod-account-validation
    rules:
      - name: pods-user-authorized-for-account
        values:
          userGroupMap.data.user-test: '["PZS0001","PZS0003","oscall"]'
      - name: paas-user-authorized-for-account
        values:
          userGroupMap.data.user-test: '["PZS0001","PZS0003","oscall"]'
    resources:
      - name: test-paas-pass
        values:
          serviceAccount: test
      - name: test-paas-fail
        values:
          serviceAccount: test
namespaceSelector:
  - name: user-test
    labels:
      foo: bar
  - name: paas
    labels:
      osc.edu/role: paas
      osc.edu/service-account: test
      account: test
